# notebook-connector

./: .gitattributes  .gitignore  .scs-complete.bash  .workflow-patcher.yml  README.md  SECURITY.md  error_code_config.yml  index.html  nb_tests.yaml  noxconfig.py  noxfile.py  pyproject.toml  test_file.txt  version.py
.doctrees/: environment.pickle  index.doctree
.github/actions/prepare_poetry_env/: action.yml
.github/workflows/: build-and-publish.yml  check-release-tag.yml  checks.yml  ci-cd.yml  ci-optional.yml  ci.yml  ci_build.yaml  experimental-tests-notebooks.yml  fast-tests.yml  gh-pages.yml  matrix-python.yml  merge-gate-extension.yml  merge-gate.yml  performance-checks.yml  report.yml  slow-checks.yml  tests-gpu.yml  tests-large-runner.yml  tests-notebooks-sagemaker.yml  tests-notebooks.yml  tests-ordinary-integration.yml  tests-saas.yml  tests-ui.yml
0.0.1/.doctrees/: environment.pickle  index.doctree
0.1.0/.doctrees/: environment.pickle  index.doctree
0.2.0/.doctrees/: environment.pickle  index.doctree
0.2.4/.doctrees/: environment.pickle  index.doctree
0.2.6/.doctrees/: environment.pickle  index.doctree
0.2.7/.doctrees/: environment.pickle  index.doctree
0.2.8/.doctrees/: environment.pickle  index.doctree
0.2.9/.doctrees/: environment.pickle  index.doctree
0.3.0/.doctrees/: environment.pickle  index.doctree
0.4.0/.doctrees/: environment.pickle  index.doctree
0.4.1/.doctrees/: environment.pickle  index.doctree
0.4.2/.doctrees/: environment.pickle  index.doctree
0.5.0/.doctrees/: environment.pickle  index.doctree
0.5.1/.doctrees/: environment.pickle  index.doctree
doc/: api.rst  conf.py  index.rst
doc/changes/: changelog.md  changes_0.0.1.md  changes_0.1.0.md  changes_0.2.0.md  changes_0.2.1.md  changes_0.2.10.md  changes_0.2.2.md  changes_0.2.3.md  changes_0.2.4.md  changes_0.2.5.md  changes_0.2.6.md  changes_0.2.7.md  changes_0.2.8.md  changes_0.2.9.md  changes_0.3.0.md  changes_0.4.0.md  changes_0.4.1.md  changes_0.4.2.md  changes_0.5.0.md  changes_0.5.1.md  changes_0.6.0.md  changes_1.0.0.md  changes_2.0.0.md  changes_2.1.0.md  changes_2.2.0.md  changes_2.2.1.md  changes_2.2.2.md  changes_2.2.3.md  changes_2.3.0.md  changes_2.4.0.md  changes_2.5.0.md  changes_2.5.1.md  changes_3.0.0.md  unreleased.md
doc/developer_guide/: dependencies.rst  developer-guide.md  developer-guide.rst  notebook_tests.rst  performance_tests.rst  release.rst  slc_versions.rst  ui_tests.rst
doc/user_guide/: ai-lab-cli.rst  bucketfs-examples.rst  cli-examples.rst  cloud-storage-examples.rst  database-connection-examples.rst  github-artifacts-examples.rst  itde-examples.rst  scs-cli.rst  secret-store-examples.rst  slc-examples.rst  text-ai-extension-examples.rst  transformers-extension-examples.rst  user-guide.md  user-guide.rst
exasol/: ai_lab_config.py  bfs_utils.py  connections.py  container_by_ip.py  current_container_finder.py  extension_wrapper_common.py  github.py  itde_manager.py  language_container_activation.py  sagemaker_extension_wrapper.py  secret_store.py  shared_memory_vault.py  transformers_extension_wrapper.py  utils.py
exasol/nb_connector/: __init__.py  ai_lab_config.py  bfs_connection.py  bfs_utils.py  connections.py  container_by_ip.py  extension_wrapper_common.py  github.py  itde_manager.py  language_container_activation.py  luigi_utils.py  model_installation.py  sagemaker_extension_wrapper.py  secret_store.py  slct_manager.py  text_ai_extension_wrapper.py  transformers_extension_wrapper.py  utils.py  version.py
exasol/nb_connector/cli/: cfg_commands.py  check_commands.py  groups.py  main.py  param_wrappers.py  reporting.py  scs_options.py  util.py
exasol/nb_connector/slc/: __init__.py  constants.py  git_access.py  package_file_editor.py  package_manager.py  package_types.py  script_language_container.py  script_languages_container.py  slc_compression_strategy.py  slc_error.py  slc_flavor.py  slc_session.py  workspace.py
exasol/nb_connector/ui/: Untitled.ipynb  __init__.py  access_store_ui.ipynb  access_store_ui.py  generic_config_ui.py  jupysql_init.py  main_config_ui.py  popup_message_ui.py  test_access_store_ui.py  ui_styles.py  useful_urls.py
main/.doctrees/: environment.pickle  index.doctree
notebook_connector/: secret_store.py
test/: bucketfs_protocol.py  conftest.py  package_manager.py  test_secret_store.py
test/integration/: conftest.py  test_cloud_storage.py  test_itde_manager.py  test_itde_manager_in_docker_container.py  test_itde_manager_with_gpu.py  test_sagemaker_extension_wrapper.py  test_slct_manager.py  test_text_ai_extension_wrapper.py  test_transformers_extension_wrapper.py
test/integration/gpu/: itest_slct_manager_with_gpu.py  test_itde_manager_with_gpu.py  test_slct_manager_with_gpu.py
test/integration/large_runner/: test_text_ai_extension_wrapper.py
test/integration/ordinary/: __init__.py  conftest.py  itest_cli.py  (+8 more)
test/notebook_test_runner/: conftest.py  test_notebooks_in_dss_docker_image.py
test/notebooks/: conftest.py  nbtest_cloud.py  nbtest_first_steps.py  nbtest_gpu.py  nbtest_ibis.py  nbtest_itde.py  nbtest_jupysql.py  nbtest_pyexasol.py  nbtest_sagemaker.py  nbtest_script_languages_container.py  nbtest_sklearn.py  nbtest_text_ai.py  nbtest_transformers.py  nbtest_useful_urls.py  notebook_test_utils.py  test_cloud.py  test_first_steps.py  test_gpu.py  test_ibis.py  test_itde.py  test_jupysql.py  test_sagemaker.py  test_script_languages_container.py  test_sklearn.py  test_text_ai.py
test/performance/: _benchmark-results.json  benchmark.py
test/ui/: conftest.py  test_access_store_ui.py  test_gui.py
test/unit/: test_bfs_utils.py  test_cloud_storage.py  test_connections.py  test_container_by_ip.py  test_current_container_finder.py  test_extension_wrapper_common.py  test_github.py  test_itde_manager.py  test_language_container_activation.py  test_secret_store.py  test_shared_memory_vault.py  test_slct_manager.py  test_utils.py  utest_luigi_utils.py
test/utils/: general_test_utils.py  integration_test_utils.py  secrets.py  time_util.py
tests/: conftest.py  test_secret_store.py
(+137 files in other folders)
