[tool.poetry]
name = "exasol-notebook-connector"
version = "0.2.4"
description = "Components, tools, APIs, and configurations in order to connect Jupyter notebooks to Exasol and various other systems."
packages = [ {include = "exasol"}, ]
authors = [ "Christoph Kuhnke <christoph.kuhnke@exasol.com>" ]
maintainers = [ "Christoph Kuhnke <christoph.kuhnke@exasol.com>" ]
classifiers = [
   "Programming Language :: Python :: 3",
   "Development Status :: 3 - Alpha",
   "Framework :: Jupyter :: JupyterLab :: 3",
   "License :: OSI Approved :: MIT License",
   "Topic :: Security :: Cryptography",
]
readme = "README.md"
license = "MIT"

[tool.poetry.urls]
"Homepage" = "https://github.io/exasol/notebook-connector"
"Documentation" = "https://github.io/exasol/notebook-connector"
"Source" = "https://github.io/exasol/notebook-connector"
"Issues" = "https://github.io/exasol/notebook-connector/issues"


[tool.poetry.dependencies]
python = ">=3.8.0,<4.0"
sqlcipher3-binary = {version = ">=0.5.0", platform = "linux"}
sqlcipher3 = {version = ">=0.5.0", platform = "darwin"}
sqlalchemy-exasol  = ">=4.6.0"
pyexasol = ">=0.24.0"
exasol-bucketfs = ">=0.6.0"
torch = {version="2.0.1+cpu", source = "torch"}
exasol-transformers-extension = {url = "https://github.com/exasol/transformers-extension/releases/download/0.7.0/exasol_transformers_extension-0.7.0.tar.gz"}
exasol-sagemaker-extension = {url = "https://github.com/exasol/sagemaker-extension/releases/download/0.6.0/exasol_sagemaker_extension-0.6.0.tar.gz"}


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-mock = "^3.7.0"
exasol-toolbox = "^0.5.0"
exasol-script-languages-container-tool = "^0.18.1"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
secondary = true


[tool.pytest.ini_options]
minversion = "6.0"

testpaths = [
    "test"
]

[tool.coverage.run]
relative_files = true
source = [
    "exasol",
]

[tool.coverage.report]
fail_under = 15


[tool.black]
line-length = 88
verbose = false
include = "\\.pyi?$"


[tool.isort]
profile = "black"
force_grid_wrap = 2


[tool.pylint.master]
fail-under = 7.5
output-format = "colorized,json:.lint.json,text:.lint.txt"

[[tool.mypy.overrides]]
module = [
    "exasol.toolbox.nox.tasks",
    "test.conftest.*",
    "test.*",
    ]
ignore_errors = true
ignore_missing_imports = true

[tool.pylint.format]
max-line-length = 88
max-module-lines = 800

[tool.poetry.scripts]
tbx = 'exasol.toolbox.tools.tbx:CLI'
