[project]
name = "exasol-notebook-connector"
version = "2.0.0"
requires-python = ">=3.10,<3.13"
description = "Components, tools, APIs, and configurations in order to connect Jupyter notebooks to Exasol and various other systems."
packages = [{ include = "exasol" }, ]
authors = [
    { name = "Christoph Kuhnke", email = "christoph.kuhnke@exasol.com" },
]
maintainers = [
    { name = "Christoph Kuhnke", email = "christoph.kuhnke@exasol.com" },
]
readme = "README.md"
license = "MIT"
dynamic = ["classifiers", "dependencies"]

[project.urls]
Homepage = "https://github.io/exasol/notebook-connector"
Documentation = "https://github.io/exasol/notebook-connector"
Source = "https://github.io/exasol/notebook-connector"
Issues = "https://github.io/exasol/notebook-connector/issues"

[tool.poetry]
requires-poetry = ">=2.1.0"
packages = [
    { include = "exasol" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Security :: Cryptography",
]

# [tool.poetry.dependencies]

[project.optional-dependencies]
sqlcipher3-binary = [ 'sqlcipher3-binary >= 0.5.0; sys_platform=="linux"' ]
sqlcipher3 = [ 'sqlcipher3-binary >= 0.5.0; sys_platform=="darwin"' ]
# The version of SLCT is dictated by its usage in the python-extension-common,
# which at the moment still uses version 3.*.
# See developer guide, section "Selecting the Versions for SLCT and SLCR".
exasol-script-languages-container-tool = [ "exasol-script-languages-container-tool >=3, <4" ]

sqlalchemy-exasol = [ "sqlalchemy-exasol >=5.0.0, <6" ]
pyexasol = [ "pyexasol >=0.26.0, <1" ]
exasol-bucketfs = [ "exasol-bucketfs >=1.0.1, <3" ]
exasol-transformers-extension = [ "exasol-transformers-extension >=2.2.1, <3" ]
exasol-sagemaker-extension = [ "exasol-sagemaker-extension >=0.11.5" ]
exasol-integration-test-docker-environment = [ "exasol-integration-test-docker-environment >=4, <5" ]

requests = [ "requests >=2.32.0" ]
types-requests = [ "types-requests >=2.31.0.6, <3" ]
ifaddr = [ "ifaddr >=0.2.0, <0.3" ]
exasol-saas-api = [ "exasol-saas-api >=0.9.0, <3" ]
ibis-framework = [ "ibis-framework [exasol] >=9.1.0, <10" ]
GitPython = [ "GitPython >=2.1.0" ]
yaspin = [ "yaspin >=3.1.0, <4" ]
exasol-text-ai-extension = [ "exasol-text-ai-extension >=0.1.0, <2.0.0" ]


[build-system]
requires = ["poetry_core>=2.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.1"
pytest-mock = "^3.7.0"
pytest_dependency = ">=0.6.0"
exasol-toolbox = "^1.9.0"
pytest-exasol-backend = ">=1.1.0,<2"


[tool.pytest.ini_options]
minversion = "6.0"

testpaths = [
    "test"
]
python_files = [
    "utest_*.py",
    "itest_*.py",
    "test_*.py",
]

[tool.coverage.run]
relative_files = true
source = [
    "exasol",
]

[tool.coverage.report]
fail_under = 15


[tool.black]
line-length = 88
verbose = false
include = "\\.pyi?$"


[tool.isort]
profile = "black"
force_grid_wrap = 2


[tool.pylint.master]
fail-under = 8.0

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "exasol/nb_connector/extension_wrapper_common",
    "test.*",
    # not yet include py.typed
    "docker.*",
    "ibis.*",
    "pyexasol.*",
    # not supporting mypy > 1.10.0; https://docs.sqlalchemy.org/en/20/orm/extensions/mypy.html
    "sqlalchemy.*",
    # typed from specific version
    "exasol.saas.*", # >=2.2.0
    "transformers.*" # >=4.51.0
]
ignore_errors = true
follow_untyped_imports = true

[tool.pylint.format]
max-line-length = 88
max-module-lines = 800

[tool.sonar]
projectKey = "com.exasol:notebook-connector"
hostUrl = "https://sonarcloud.io"
organization = "exasol"